Issue fixed with z-index priority when editing a course

--- a/css/style.css
+++ b/css/style.css
@@ -1296,7 +1296,7 @@ input[type="radio"]:checked + label span.check::before {
   top: 0;
   left: 0;
   width: 108px;
-  z-index: 10000;
+  z-index: 999;
 }
 /* line 671, ../scss/style.scss */
 #carroussel-parcours .managing-box-item-carroussel span {
